fixed header spacings

--- a/src/components/Common/BlifTabs/BlifTabs.scss
+++ b/src/components/Common/BlifTabs/BlifTabs.scss
@@ -10,7 +10,7 @@
         font-size: 14px !important;
         font-family: 'TELUS-Web', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
         font-weight: 400 !important;
-        padding: 4px 8px !important;
+        padding: 4px 10px !important;
         border-bottom: 4px solid transparent;
     }
 
